...
                        'Success set name: ${_textController.text}',
                      ),
                    ),
                  );
              }
            },
            child: const Text('Submit'),
          ),
        ),
      ],
      body: Form(
        key: _formKey,
        child: ListView(
...
          children: [
            GluonTextFormField(
              controller: _textController,
              onChanged: (value) => _formKey.currentState?.validate(),
              onFieldSubmitted: (value) => _formKey.currentState?.validate(),
              validator: (value) =>
                  (value?.isEmpty ?? true) ? 'Username cannot be empty' : null,
              decoration: const InputDecoration(
                hintText: 'Username',
                prefixIcon: Icon(Icons.person_rounded),
              ),
            ),
          ],
...
