...
            ElevatedButton(
              onPressed: () => Navigator.of(context).push(
                MaterialPageRoute(
                  builder: (context) => const WidgetTestScreen(),
                ),
              ),
              child: const Text('Widget Test'),
            ),
            ElevatedButton(
              onPressed: () => Navigator.of(context).push(
                MaterialPageRoute(
                  builder: (context) => const LogicTestScreen(),
                ),
              ),
              child: const Text('Logic Test'),
            ),
          ],
        ),
      ),
    );
  }
...
