...
          child: ElevatedButton(
            onPressed: () {
              if (_formKey.currentState?.validate() ?? false) {
                _onInputSubmitted(_inputController.text);
              }
            },
            child: const Text('Convert'),
          ),
        ),
      ],
      body: ListView(
        padding: const EdgeInsets.all(20),
        children: [
...
      number!,
    ).toSentenceCase}.';
  }

  String? _inputValidator(value) {
    if (value?.isEmpty ?? true) {
      return 'Input cannot be empty';
    }

    var integerVal = int.tryParse(value!);

    if (integerVal == null) {
      return 'Please only input digits';
...
